--- a/doc/css/styles.css
+++ b/doc/css/styles.css
@@ -1,8 +1,9 @@
 body {
-  /* background: #f5f5f5; */
-  /* color: #202020; */
-    background: #303030;
-    color: #f5f5f5;
+  margin: 20px;
+  background: #303030;
+  color: #f5f5f5;
+  font-size: 1.6rem;
+  font-weight: 300;
 }
 
 .container {
@@ -28,10 +29,7 @@ body {
 }
 
 .hero {
-  /* color: #363636; */
   color: #f5f5f5;
-  height: 80vh;
-
 }
 
 .hero div {
@@ -55,63 +53,33 @@ body {
   background: #e4e4e4;
 }
 
+a {
+  color: #cd86ff;
+}
+
+a:hover {
+  color: #dbb9f3;
+}
+
+img {
+  max-width: 100%;
+}
+
+.footer-links {
+  font-size: 1.5rem;
+  color: #f5f5f5;
+  text-decoration: none;
+  font-weight: 250;
+}
+
 .header {
   font-weight: 200;
 }
 
-.content {
-  font-size: 1.6rem;
-  font-weight: 300;
-}
-
-a {
-    color: #cd86ff;
-}
-
-a:hover {
-    color: #dbb9f3;
-}
-
-.card {
-  background: #FAFAFA;
-}
-
-.string {
-  color: #02C1A7;
-}
-.special {
-  color: #AC2EC5;
-}
-.global {
-  color: #db9114;
-}
-.method {
-  color: #00A2CD;
-}
-.comment {
-  color: #989898;
-}
-
-
-img {
-    max-width: 100%;
-}
-
-
-.footer-links {
-
-    font-size: 1.5rem;
-    color: #f5f5f5;
-    text-decoration: none;
-    font-weight: 250;
-
-}
-
 #footer {
-    margin-bottom: 3rem;
+  margin-bottom: 3rem;
 }
 
-#footer h5{
-    margin-bottom: 1.5rem;
+#footer h5 {
+  margin-bottom: 1.5rem;
 }
-
